--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </p>
         </div>
         <div class="main-two">
-          <img src="./Images/4.png" alt="" />
+         // <img src="./Images/4.png" alt="" />
         </div>
       </div>
       <section class="about flex" id="about">
